# course-work

./: .gitignore  CMakeLists.txt  README.md  companies.txt  course_work_diagram.puml  fixes.txt  generate_document.py  test.puml  Раздел_3_1_классы_и_структуры.docx
include/: Company.h  DerivedEmployees.h  Employee.h  FileManager.h  MainWindow.h  Project.h  action_button_helper.h  app_styles.h  auto_save_loader.h  company.h  company_manager.h  consts.h  container_utils.h  derived_employees.h  dialog_helper.h  display_helper.h  employee.h  employee_dialog_handler.h  employee_dialog_helper.h  employee_validator.h  exception_handler.h  file_helper.h  file_manager.h  html_generator.h  id_helper.h  main_window.h  project.h  project_dialog_helper.h  project_helper.h  statistics_chart_widget.h  task.h  task_assignment_helper.h  task_dialog_helper.h  ui_builder.h  validation_helper.h
include/entities/: company.h  company_managers.h  company_task_operations.h  derived_employees.h  employee.h  project.h  task.h
include/exceptions/: exceptions.h
include/helpers/: action_button_helper.h  dialog_helper.h  display_helper.h  employee_dialog_handler.h  employee_dialog_helper.h  employee_validator.h  file_helper.h  html_generator.h  id_helper.h  project_helper.h  task_assignment_helper.h  task_dialog_helper.h
include/managers/: auto_save_loader.h  company_manager.h  file_manager.h
include/services/: cost_calculation_service.h  employee_service.h  project_service.h  task_assignment_service.h
include/ui/: main_window.h  main_window_helpers.h  main_window_operations.h  main_window_ui_builder.h  main_window_ui_components.h  statistics_chart_widget.h
include/utils/: app_styles.h  company_utils.h  consts.h
src/: Company.cpp  DerivedEmployees.cpp  Employee.cpp  FileManager.cpp  MainWindow.cpp  Project.cpp  action_button_helper.cpp  app_styles.cpp  auto_save_loader.cpp  company.cpp  company_manager.cpp  derived_employees.cpp  dialog_helper.cpp  display_helper.cpp  employee.cpp  employee_dialog_handler.cpp  employee_dialog_helper.cpp  employee_validator.cpp  exception_handler.cpp  exceptions.cpp  file_helper.cpp  file_manager.cpp  html_generator.cpp  id_helper.cpp  main.cpp  main_window.cpp  main_window_ui_builder.cpp  project.cpp  project_dialog_helper.cpp  project_helper.cpp  statistics_chart_widget.cpp  task.cpp  task_assignment_helper.cpp  task_dialog_helper.cpp  ui_builder.cpp  ui_style_helper.cpp  validation_helper.cpp
src/entities/: company.cpp  company_managers.cpp  company_task_operations.cpp  derived_employees.cpp  employee.cpp  project.cpp  task.cpp
src/exceptions/: exception_handler.cpp  exceptions.cpp
src/helpers/: action_button_helper.cpp  dialog_helper.cpp  display_helper.cpp  employee_dialog_handler.cpp  employee_dialog_helper.cpp  employee_validator.cpp  file_helper.cpp  html_generator.cpp  id_helper.cpp  project_dialog_helper.cpp  project_helper.cpp  task_assignment_helper.cpp  task_dialog_helper.cpp  validation_helper.cpp
src/managers/: auto_save_loader.cpp  company_manager.cpp  file_manager.cpp
src/services/: cost_calculation_service.cpp  employee_service.cpp  project_service.cpp  task_assignment_service.cpp
src/ui/: main_window.cpp  main_window_helpers.cpp  main_window_operations.cpp  main_window_ui_builder.cpp  statistics_chart_widget.cpp
src/utils/: app_styles.cpp
